--------------------------

0.9-4	(under development)
    o	Windows: add Java configuartion paths before existing PATH
	entries

    o	Windows: honor a new option "java.home" to override JAVA_HOME
	environment variable and system settings to allow co-existence
	of other tools that may require differen Java paths.

    o	Windows: fix a buglet in error reporting when no Java is installed

0.9-3	2011-12-10
    o	bugfix: .jinit() was failing on Java 1.4 with
	"cannot obtain Class.getSimpleName method ID"
	since the method is only present in Java 1.5+
	This was inadvertent, rJava aims to support Java 1.2+

0.9-2	2011-10-26
    o	When NOAWT is set, rJava will enable headless mode in the JVM
	by setting the java.awt.headless property to true during
	initialization in .jinit()

    o	All C-level entry points are now pre-cached when rJava is
	loaded such that calls can be made much faster since symbols
	don't need to be looked up. This should speed up calls to
	methods that take very little time as well as other parts
	such as checking for exceptions.

0.9-1	2011-06-28
    o	fixed Java detection from registry on Windows (bug introduced
	in 0.9-0)

0.9-0	2011-06-22
    o	fixes issues introduced by several new features in the late
	0.8 series. Most imporantly .jarray() and .jevalArray() behave
	as intended (and as implemented in previous versions). The
	same applies to .jcall() behavior with respect to arrays and
	its evalArray arument. The defaults for some new arguments
	have been changed to reflect the original behavior.

    o	.jevalArray() has an additional argument `simplify' which allows
	multi-dimensional arrays to be converted to native R
	types. Use with care - it may convert more recursive types in
	the future so it should be used preferrably where you have
	control over the types converted.

    o	fixed a bug in .jevalArray that was not simplifying string
	vectors correctly when the array type was not specified